WWU-Cloud-blog-app/K8/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: solaestuans/497-a4-docker:latest
        ports:
        - containerPort: 8080
