WWU-Cloud-blog-app/K8/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  tls:
  - secretName: blog-a4-cert
    hosts:
    - ec2-3-90-43-46.compute-1.amazonaws.com
  rules:
  - host: ec2-3-90-43-46.compute-1.amazonaws.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-service
              port:
                number: 80
